@@ -9,6 +9,8 @@ Version 1.4.20 - SVN
   - Fix issue with multi-part related messages not showing all attachments (#2830140).
   - Fix for security token missing in newmail plugin (#2919418).
   - Fix sort in Sent folder to sort by "To" field instead of "From" field (#2907412).
+  - Fix for mailto: urls containing + characters, thanks to Michael Puls II for the 
+    patch.
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
